lager-lang/examples/good/arg_val.lg
int f(int x) {
    x = x * 2;
    return x;
}

int main() {
    int x = 5;
    print(f(x)); // 10
    print(x);        // 5
    
    return 0;
}
