lager-lang/examples/bad/wrong-main.lg
string main(int a) { // compile error
    return "abc";
}
